# test

./: README.md  diary  myfft.c
bat/: batchcopy.bat
cordic/: CMakeLists.txt  cordic.cpp
myfft/: CMakeLists.txt  myfft.c  myfft.cpp  myfft.h  myfft.vpj  myfft.vpw  myfft.vpwhistu  myfft.vtg
myfft/Debug/: myfft  myfft.vpb
pp/: pp.c  pp.h
python/: audio.py  demo.py  login.py  music_crawl.py  play.py  script.py  script.vbs
python/music/: audio.py  palymp3list.py  play.py  playmp3.py  playmp3bychunk.py
